--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+  "homepage": "https://github.com/Sudharshan45/netflix-clone.git",
   "name": "netflix-clone",
   "version": "0.1.0",
   "private": true,
@@ -6,12 +7,19 @@
     "@testing-library/jest-dom": "^5.11.8",
     "@testing-library/react": "^11.2.2",
     "@testing-library/user-event": "^12.6.0",
+    "axios": "^0.21.1",
+    "firebase": "^8.2.1",
+    "firebase-tools": "^9.1.0",
+    "movie-trailer": "^2.0.6",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-scripts": "4.0.1",
+    "react-youtube": "^7.13.0",
     "web-vitals": "^0.2.4"
   },
   "scripts": {
+    "predeploy":"npm-run-bulid",
+    "deploy":"gh-pages -d bulid",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
@@ -34,5 +42,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "gh-pages": "^3.1.0"
   }
 }
